--- a/browser/test.html
+++ b/browser/test.html
@@ -4,52 +4,13 @@
 <title>jquery 右侧弹出评论栏</title>
 <meta http-equiv="Content-Type" content="text/html; charset=gbk">
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-
-<style type="text/css">
-body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,form,fieldset,legend,button,input,textarea,table,th,td,section,article,aside,header,footer,nav,dialog,figure{margin:0;padding:0}
-body,button,input,select,textarea{font:12px/1.5 "Microsoft YaHei", "\5B8B\4F53",Tahoma, Geneva, sans-serif;color:#333}
-html{zoom:expression(function(ele){ele.style.zoom = "1";document.execCommand("BackgroundImageCache", false, true);})(this);}
-body{ background:#FFF;}
-section,article,aside,header,footer,nav,dialog,figure{display:block}
-table{border-collapse:collapse;border-spacing:0}
-fieldset,img{border:0} 
-address,caption,cite,code,dfn,em,b,th,var,i{font-weight:normal;font-style:normal}
-code,kbd,pre,samp{font-family:courier new,courier,monospace}
-ol,ul,li{list-style:none} 
-.clear{overflow:hidden;clear:both}
-.clearfix:after{clear:both;overflow:hidden;content:"."}
-.cf:before, .cf:after {content:"";display:table;}
-.cf:after {clear:both;}
-.cf {zoom:1;}
-
-#showMsg{
-  background: #FFFFFF;
-  height: 500px;
-  width: inherit;
-  text-align: justify;
-}
-
-/*aSlide_tools*/
-#right_float{position: fixed; right: 0; top: 50px; z-index:999; _overflow-x:hidden;}
-#commentBoard{width: 500px; position: relative; height: 550px; right: -500px; line-height: 25px;border:1px solid #000000; border-right:0px;margin-top:-1px; background:#fff;}
-
-#boardLeft{
-position:absolute;top:40%;left:-31px;width:30px;border:0px solid #e0e0e0;background:#FFF000;font-size:20px;line-height:50px;text-align:center;
-}
-
-#boardDesc{height:100px;}
-#boardButton{height:50px;background:#AAAAAA;}
-
-</style>
+<link rel="stylesheet" href="comment_styles.css" type="text/css" media="all" />
 </head>
-<body>
 
+<body>
 	<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1<br>1
 
 	<div id="right_float">
-	<!-- <a id="float1" href="#" target="_blank"></a> -->
-	<!-- <span><a href="#" target="_blank">会员服务</a></span> -->
-	
 	<div id="commentBoard">
 		<div id="boardLeft">
 			<div id="boardDesc">图草</div>
@@ -73,47 +34,48 @@ position:absolute;top:40%;left:-31px;width:30px;border:0px solid #e0e0e0;backgro
 		</form>
 		
 		<script type="text/javascript">
-			function showMsg(){
-			var oText = document.getElementById("comment");
-
-			var pNode  = document.createElement("p");
-			var tNode  = document.createTextNode(oText.value);
-			  pNode.appendChild(tNode);
-			var dContent = document.getElementById("showMsg");
-			dContent.insertBefore(pNode,dContent.firstChild);
-			oText.value='';
-			}
-
-			function removeMsg(){
-			   var oDiv = document.getElementById("showMsg");
-			 var oP = document.getElementsByTagName("p");
-			 oDiv.removeChild(oP[0]);
-			}
-			document.getElementById("send").onclick=showMsg;
-			document.getElementById("remove").onclick=removeMsg;
 		</script>
 	</div></div>
 
 	<script type="text/javascript">
-	$(document).ready(function(){
-	  $("#boardButton").on('click', function(){
-	    if (!$(this).attr('data-toggled') || $(this).attr('data-toggled') == 'off') {
-		  $("#commentBoard").animate({right:'0px'});
-		  $(this).attr('data-toggled','on');
-		  $(this).html(">");
-	    } else {
-		  $("#commentBoard").animate({right:'-500px'});
-		  $(this).attr('data-toggled','off');
-		  $(this).html("<");
+		function showMsg(){
+		var oText = document.getElementById("comment");
+
+		var pNode  = document.createElement("p");
+		var tNode  = document.createTextNode(oText.value);
+		  pNode.appendChild(tNode);
+		var dContent = document.getElementById("showMsg");
+		dContent.insertBefore(pNode,dContent.firstChild);
+		oText.value='';
 		}
-	  });
-	  $("#submitComment").on('click', function(){
-		var posting = $.post("http://127.0.0.1:8000/comment/", {'comment': $('#comment').val() });
-		posting.done(function(data) {
-		  $('#showMsg').html(data);
+
+		function removeMsg(){
+		   var oDiv = document.getElementById("showMsg");
+		 var oP = document.getElementsByTagName("p");
+		 oDiv.removeChild(oP[0]);
+		}
+		document.getElementById("send").onclick=showMsg;
+		document.getElementById("remove").onclick=removeMsg;
+		
+		$(document).ready(function(){
+		  $("#boardButton").on('click', function(){
+			if (!$(this).attr('data-toggled') || $(this).attr('data-toggled') == 'off') {
+			  $("#commentBoard").animate({right:'0px'});
+			  $(this).attr('data-toggled','on');
+			  $(this).html(">");
+			} else {
+			  $("#commentBoard").animate({right:'-500px'});
+			  $(this).attr('data-toggled','off');
+			  $(this).html("<");
+			}
+		  });
+		  $("#submitComment").on('click', function(){
+			var posting = $.post("http://127.0.0.1:8000/comment/", {'comment': $('#comment').val() });
+			posting.done(function(data) {
+			  $('#showMsg').html(data);
+			});
+		  });
 		});
-	  });
-	});
 	</script>
 
 </body>
