--- a/browser/test_only_div.html
+++ b/browser/test_only_div.html
@@ -1,16 +1,16 @@
-
+ï»¿
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-<link rel="stylesheet" href="comment_styles.css" type="text/css" media="all" />
+<link rel="stylesheet" href="http://www.anwcl.com/css/comment_styles.css" type="text/css" media="all" />
 
 <div id="right_float">
 <div id="commentBoard">
 	<div id="boardLeft">
-		<div id="boardDesc">Í¼²Ý</div>
+		<div id="boardDesc">å›¾è‰</div>
 		<div id="boardButton"><</div>
 	</div>
 	<div id="showMsg"></div>
 	<form id="commentForm">
-		ÇëÊäÈëÁôÑÔ:<input type="comment" id="comment" name="comment" placeholder="¿ÉÊäÈë10-140¸ö×Ö">
+		è¯·è¾“å…¥ç•™è¨€:<input type="comment" id="comment" name="comment" placeholder="å¯è¾“å…¥10-140ä¸ªå­—">
 		<input type="button" id="submitComment" value="submitComment">
 	</form>
 	<form id="loginForm">
