--- a/browser/test_only_div.html
+++ b/browser/test_only_div.html
@@ -5,22 +5,13 @@
 <div id="right_float">
 <div id="commentBoard">
 	<div id="boardLeft">
-		<div id="boardDesc">图草</div>
+		<div id="boardDesc">神吐槽</div>
 		<div id="boardButton"><</div>
 	</div>
 	<div id="showMsg"></div>
 	<form id="commentForm">
 		请输入留言:<input type="comment" id="comment" name="comment" placeholder="可输入10-140个字">
-		<input type="button" id="submitComment" value="submitComment">
-	</form>
-	<form id="loginForm">
-		<label for="username">Username</label>
-		<input type="text" id="username" placeholder="Username" />
-
-		<label for="password">Password</label>
-		<input type="text" id="password" placeholder="Password" />
-
-		<input type="submit" id="login" value="Login"/>
+		<input type="button" id="submitComment" value="提交">
 	</form>
 	
 	<script type="text/javascript">
@@ -29,6 +20,7 @@
 
 <script type="text/javascript">
 
+$('#showMsg').load('http://127.0.0.1:8000/comment/');
 $(document).ready(function(){
   $("#boardButton").on('click', function(){
 	if (!$(this).attr('data-toggled') || $(this).attr('data-toggled') == 'off') {
