--- a/browser/test_only_div.html
+++ b/browser/test_only_div.html
@@ -1,21 +1,84 @@
 ﻿
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+
+<link rel="stylesheet" href="http://www.anwcl.com/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="http://www.anwcl.com/bootstrap/css/bootstrap-theme.min.css">
+<script src="http://www.anwcl.com/bootstrap/js/bootstrap.min.js"></script>
+
 <link rel="stylesheet" href="http://www.anwcl.com/css/comment_styles.css" type="text/css" media="all" />
+<!-- 
+<textarea class="form-control" rows="3"></textarea>
+<a data-toggle="modal" href="#myModal" class="btn btn-primary btn-lg">Launch demo modal</a>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title">Modal title</h4>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div> -->
+
+<!-- <form action="sign_in.html" method="get">
+	<button type="submit" class="btn btn-default navbar-btn">Sign in</button>
+</form> -->
 
 
-<div id="commentBoard">
-	<div id="boardLeft">
-		<div id="boardDesc"><p>神 吐 槽</p></div>
-		<div id="boardButton"><</div>
+
+<div id="commentBoard" class="container">
+	<div id="boardLeft" >
+		<div id="boardDesc"><p><strong>神 吐 槽 ——</strong></p></div>
+		<div id="boardButton"><strong>＜</strong></div>
 	</div>
-	<div id="showMsg"></div>
-	<form id="commentForm">
-		请输入留言:<input type="comment" id="comment" name="comment" placeholder="可输入10-140个字">
-		<input type="button" id="submitComment" value="提交">
-	</form>
+
+	<div id="boardRight" >
 	
-	<script type="text/javascript">
-	</script>
+
+	
+	<ul class="nav nav-pills" class="panel panel-default">
+	  <li class="active">
+		<a href="#">
+		  <span class="badge pull-right">42</span>
+		  Board
+		</a>
+	  </li>
+	  <li>
+		<a href="#">
+		  <span class="badge pull-right">2</span>
+		  Profile
+		</a>
+	  </li>
+	  <li>
+		<a href="#">
+		  <span class="badge pull-right">33</span>
+		  Messages
+		</a>
+	  </li>
+	</ul>
+
+		<br>
+		<div id="showMsg"></div>
+
+		<div class="row">
+		  <div class="col-lg-6">
+			<div class="input-group">
+			  <input type="text" class="form-control" id="comment" name="comment" placeholder="可输入10-140个字">
+			  <span class="input-group-btn">
+				<button class="btn btn-default" id="submitComment" type="button">Go!</button>
+			  </span>
+			</div><!-- /input-group -->
+		  </div><!-- /.col-lg-6 -->
+		</div><!-- /.row -->
+	</div>
+
 </div>
 
 <script type="text/javascript" src="commentBoard.js"></script>
