--- a/server/d1/static/test/test_only_div.html
+++ b/server/d1/static/test/test_only_div.html
@@ -33,11 +33,11 @@
 
 
 
-<div id="commentBoard" class="container">
-	<div id="boardLeft" >
+<div id="commentBoard">
+<!-- 	<div id="boardLeft" >
 		<div id="boardDesc"><p><strong>神 吐 槽 —</strong></p></div>
 		<div id="boardButton"><strong>＜</strong></div>
-	</div>
+	</div> -->
 
 	<div id="boardRight" >
 	
@@ -47,19 +47,19 @@
 	  <li class="active">
 		<a href="#">
 		  <span class="badge pull-right">42</span>
-		  Board
+		  口水
 		</a>
 	  </li>
 	  <li>
 		<a href="#">
 		  <span class="badge pull-right">2</span>
-		  Profile
+		  账户
 		</a>
 	  </li>
 	  <li>
 		<a href="#">
 		  <span class="badge pull-right">33</span>
-		  Messages
+		  信封
 		</a>
 	  </li>
 	</ul>
@@ -81,5 +81,5 @@
 
 </div>
 
-<script type="text/javascript" src="commentBoard.js"></script>
+<script type="text/javascript" src="http://www.anwcl.com:8000/static/test/commentBoard.js"></script>
 
