--- a/server/d1/static/test/iframe_test.html
+++ b/server/d1/static/test/iframe_test.html
@@ -5,7 +5,7 @@
 <div id="special_div_for_anwcl_comment_board">
   <iframe src="http://www.anwcl.com:8000/static/test/test_only_div.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
   	<div id="boardLeft" >
-		<div id="boardDesc"><p><strong>神 吐 槽 —</strong></p></div>
+		<div id="boardDesc"><p>神 吐 槽 —</p></div>
 		<div id="boardButton"><strong>＜</strong></div>
 	</div>
 </div>
