--- a/browser/chrome-extension/god-alike-comment/popup.html
+++ b/browser/chrome-extension/god-alike-comment/popup.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>God-alike-comment's Popup</title>
     <style>
       body {
         min-width: 357px;
@@ -26,6 +26,9 @@
     <script src="popup.js"></script>
   </head>
   <body>
+  
+  can i directly show here?
+  
   </body>
 </html>
 
