--- a/server/d1/static/test/iframe_test.html
+++ b/server/d1/static/test/iframe_test.html
@@ -6,6 +6,6 @@
   <iframe src="http://www.anwcl.com:8000/static/test/test_only_div.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
   	<div id="boardLeft" >
 		<div id="boardDesc"><p>神 吐 槽 —</p></div>
-		<div id="boardButton"><strong>＜</strong></div>
+		<div id="boardButton"><strong><</strong></div>
 	</div>
 </div>
