--- a/server/d1/static/test/iframe_test.html
+++ b/server/d1/static/test/iframe_test.html
@@ -3,7 +3,7 @@
 <script type="text/javascript" src="http://www.anwcl.com:8000/static/test/floatCommentBoard.js"></script>
 
 <div id="special_div_for_anwcl_comment_board">
-  <iframe src="http://www.anwcl.com:8000/static/test/test_only_div.html" width="100%" height="100%" frameborder="0" scrolling="no"></iframe>
+  <iframe src="http://www.anwcl.com:8000/static/test/test_only_div.html" width="100%" height="100%" frameborder="0"></iframe>
   	<div id="boardLeft" >
 		<div id="boardDesc"><p>神 吐 槽 —</p></div>
 		<div id="boardButton"><strong><</strong></div>
