onepage-scroll: fix the demo url

--- a/server/d1/static/onepage-scroll/Demo/demo.html
+++ b/server/d1/static/onepage-scroll/Demo/demo.html
@@ -418,7 +418,7 @@
 	    
 	    <section class="page3">
 	      <div class="page_container">
-          <h1>非常简洁？</h1>
+          <h1>简洁</h1>
           <h2>You can customise the animation timing, the selector or even the animation easing using CSS3. I can't wait to see what you guys will come up with. Don't forget to grab them for free on Github'</h2>
           <div class="btns">
   	        <a class="reload btn" href="https://github.com/peachananr/onepage-scroll">Download on Github</a>
@@ -426,7 +426,7 @@
   	    </div>
       </section>
     </div>
-    <a class="back" href="http://www.thepetedesign.com/#design">Back to The Pete Design</a>
+    <a class="back" href="/">回到藤蔓评论</a>
     <a href="https://github.com/peachananr/onepage-scroll"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
   </div>
 </body>
