Enable chrome extension as a comment poster -- WIP

--- a/browser/user-extension/chrome-extension/god-alike-comment/popup.html
+++ b/browser/user-extension/chrome-extension/god-alike-comment/popup.html
@@ -23,11 +23,11 @@
       -
       - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
      -->
+	<script src="jquery.min.js"></script>
+	<script src="btoa.js"></script>
     <script src="popup.js"></script>
   </head>
   <body>
-  
-  can i directly show here?
   
   </body>
 </html>
