--- a/browser/user-extension/chrome-extension/god-alike-comment/popup.html
+++ b/browser/user-extension/chrome-extension/god-alike-comment/popup.html
@@ -7,6 +7,10 @@
         min-width: 357px;
         overflow-x: hidden;
       }
+	  
+	  iframe {
+	    min-height: 600px;
+	  }
 
       img {
         margin: 5px;
@@ -28,7 +32,8 @@
     <script src="popup.js"></script>
   </head>
   <body>
-  
+    <iframe src="#" width="100%" height="100%" frameborder="0">
+	</iframe>
   </body>
 </html>
 
