100yuan: formatter code

--- a/resource/100yuan/index.html
+++ b/resource/100yuan/index.html
@@ -38,7 +38,7 @@ background-color: white;
 您的浏览器不支持html5, 请换用支持html5的浏览器。
 </canvas>
 <script type="text/javascript">
-document.write(unescape("%3Cscript src='http://hm.baidu.com/h.js%3F35db9ef8ae536bf38ed608c8995f81ea' type='text/javascript'%3E%3C/script%3E"));
+// document.write(unescape("%3Cscript src='http://hm.baidu.com/h.js%3F35db9ef8ae536bf38ed608c8995f81ea' type='text/javascript'%3E%3C/script%3E"));
 </script>
 </body>
 </html>
