100yuan: make js readable

--- a/resource/100yuan/index.html
+++ b/resource/100yuan/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1.0" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
-<title>别踩白块儿</title>
+<title>满足百元哥</title>
 <script type="text/javascript">
 var GID = "piano";
 var SCORE_LIMIT = 80;
