--- a/browser/user-extension/chrome-extension/vine-comment/popup.html
+++ b/browser/user-extension/chrome-extension/vine-comment/popup.html
@@ -36,6 +36,8 @@
   <body>
     <iframe src="#" width="100%" height="100%" frameborder="0">
 	</iframe>
+    <div id='page' style="display:none">
+    </div>
   </body>
 </html>
 
