--- a/browser/user-extension/chrome-extension/vine-comment/popup.html
+++ b/browser/user-extension/chrome-extension/vine-comment/popup.html
@@ -36,6 +36,7 @@
   <body>
     <iframe src="#" width="100%" height="100%" frameborder="0">
 	</iframe>
+    <div id='test_image'></div>
   </body>
 </html>
 
