front page capture screen ok

--- a/browser/user-extension/chrome-extension/vine-comment/popup.html
+++ b/browser/user-extension/chrome-extension/vine-comment/popup.html
@@ -13,6 +13,10 @@
 	    min-height: 770px;
 	  }
 
+      img#target {
+          width:auto;
+          height:auto;
+      }
 
       img {
         margin: 5px;
@@ -21,6 +25,7 @@
         width: 75px;
         height: 75px;
       }
+
     </style>
 
     <!--
@@ -34,9 +39,8 @@
   <script src="popup.js"></script>
   </head>
   <body>
-    <iframe src="#" width="100%" height="100%" frameborder="0">
+    <iframe src="" width="100%" height="100%" frameborder="0">
 	</iframe>
-    <div id='test_image'></div>
   </body>
 </html>
 
