--- a/browser/user-extension/chrome-extension/vine-comment/popup.html
+++ b/browser/user-extension/chrome-extension/vine-comment/popup.html
@@ -8,6 +8,11 @@
 		    height: 500px;
         overflow-x: hidden;
       }
+      html {
+        min-width: 500px;
+		    height: 500px;
+        overflow-x: hidden;
+      }
 	  
 	  iframe {
 	    min-height: 770px;
