--- a/browser/user-extension/chrome-extension/vine-comment/popup.html
+++ b/browser/user-extension/chrome-extension/vine-comment/popup.html
@@ -7,6 +7,7 @@
         min-width: 500px;
 		    height: 500px;
         overflow-x: hidden;
+        overflow-y: hidden;
       }
       html {
         min-width: 500px;
