--- a/browser/user-extension/chrome-extension/vine-comment/popup.html
+++ b/browser/user-extension/chrome-extension/vine-comment/popup.html
@@ -7,7 +7,7 @@
         min-width: 500px;
 		    height: 500px;
         overflow-x: hidden;
-        overflow-y: hidden;
+        //overflow-y: hidden;
       }
       html {
         min-width: 500px;
@@ -16,7 +16,7 @@
       }
 	  
 	  iframe {
-	    min-height: 770px;
+	    min-height: 300px;
 	  }
 
       img#target {
@@ -45,7 +45,7 @@
   <script src="popup.js"></script>
   </head>
   <body>
-    <iframe src="" width="100%" height="100%" frameborder="0">
+    <iframe src="" width="100%" height="95%" frameborder="0">
 	</iframe>
   </body>
 </html>
